A tiny little bit of loc

--- a/localization/english/missions/sapmi_missions_l_english.yml
+++ b/localization/english/missions/sapmi_missions_l_english.yml
@@ -14,13 +14,13 @@
  sapmi_missions_task_2_DESC: "Our nation's economy is primarly based on fishing and agriculture. It would be sensible to secure new sources and thus build a strong foundation for a prosperous nation."
 
  sapmi_missions_task_3: "Explore the Baltic Sea"
- sapmi_missions_task_3_DESC: ""
+ sapmi_missions_task_3_DESC: "We should establish a fleet of explorers who shall navigate through the Baltic Sea, and find opportunities for our own colonial ambitions."
 
  sapmi_missions_task_4: "Development of Skirith"
  sapmi_missions_task_4_DESC: ""
 
  sapmi_missions_task_5: "Control the Baltic Trade"
- sapmi_missions_task_5_DESC: ""
+ sapmi_missions_task_5_DESC: "Baltic fishes nourish our people, and its waves lead us to foreign treasures. But it also plays another important role as it is our sea of commerce and trade. We should establish markets in key provinces of our country so we can control the trade."
 
  sapmi_missions_task_6: "Honor our Ancestors" #'Muricans forget u
  sapmi_missions_task_6_DESC: ""
@@ -32,22 +32,22 @@
  sapmi_missions_task_8_DESC: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Fenns. Tales of our military might will be born from our many campaigns to come."
 
  sapmi_missions_task_9: "Central Sanctuary"
- sapmi_missions_task_9_DESC: ""
+ sapmi_missions_task_9_DESC: "Continuing on the path to proselytize our people, we must strive forward and found a new central sanctuary buzzing with priest activity, as a symbol of our unstoppable and unquenchable growth!"
 
  sapmi_missions_task_10: "Scandian Takeover"
  sapmi_missions_task_10_DESC: ""
 
  sapmi_missions_task_11: "Baltic Dominance"
- sapmi_missions_task_11_DESC: ""
+ sapmi_missions_task_11_DESC: "The seas of the Baltic are a congenial place for a strong power. Due to recent attempts of nomads and Germanics, we must strive to protect our coasts and assert our dominance over its coasts!"
 
  sapmi_missions_task_12: "Integrate Fenns"
- sapmi_missions_task_12_DESC: ""
+ sapmi_missions_task_12_DESC: "The Fenns are a people living in the dense forests to our south, where no other Sapmi lives. They are living in territory, which formally belongs to us. We should integrate them into our society so we can benefit from these forests."
 
  sapmi_missions_task_13: "Reorganize Tribes" #reorganising reorganize
- sapmi_missions_task_13_DESC: ""
+ sapmi_missions_task_13_DESC: "Liberty is most sweet to those who have tasted the bitterness of servitude. Let us strive for our autonomy and undo the shackles of our past! The Sapmi shall be free."
 
  sapmi_missions_task_14: "Land of the People"
- sapmi_missions_task_14_DESC: ""
+ sapmi_missions_task_14_DESC: "Despite our success in military and administrative matters, the question of our national identity is slowly formulating within our society. We must ensure the supremacy of our culture by expanding even further."
 
 
  #Events
@@ -118,16 +118,16 @@
  me_sapmi_14.a: ""
 
  #Tooltips
- sapmi_missions_task_1_admiral_martial_8: "We have an admiral with a martial skill of at least 8."
- sapmi_missions_task_6_high_priest_zeal_7: "We have a high priest with a zeal skill of at least 7."
+ sapmi_missions_task_1_admiral_martial_8: "We have an Admiral with a martial skill of at least 8."
+ sapmi_missions_task_6_high_priest_zeal_7: "We have a High Priest with a zeal skill of at least 7."
  sapmi_missions_task_5_three_baltic_ports: "We have at least three Baltic ports with a Merchant Special Pop."
  sapmi_missions_task_14_culture_group: "Dominant province culture is in the Finnic group."
- sapmi_missions_task_3_claims: "TODO CLAIMS"
- sapmi_missions_task_7_claims: "TODO CLAIMS"
- sapmi_missions_task_8_claims: "TODO CLAIMS"
- sapmi_missions_task_10_claims: "TODO CLAIMS"
- sapmi_missions_task_11_claims: "TODO CLAIMS"
- sapmi_missions_task_14_claims: "TODO CLAIMS"
+ sapmi_missions_task_3_claims: "We will get claims on the Areas of Ilmandu Superior, Ilmandu Inferior and Velho."
+ sapmi_missions_task_7_claims: "We will get claims on the Areas of Sithonia, Suionia, East Gothia, West Gothia and Herulia."
+ sapmi_missions_task_8_claims: "We will get claims on the Areas of Turuntia, Chrononis and Galindia."
+ sapmi_missions_task_10_claims: "We will get claims on the Region of Scandia."
+ sapmi_missions_task_11_claims: "We will get claims on the Areas of Rugia, Pharodenia, Joki, Dyakovo and Suono."
+ sapmi_missions_task_14_claims: "We will get claims on the Region of Hyperborea."
  
  #Modifiers
  sapmi_migrate_mod: "Baltic Migrations"
@@ -147,5 +147,5 @@
  desc_integrated_fenns: "TODO MOD"
  desc_reorganised_sapmi_1: "TODO MOD"
  desc_reorganised_sapmi_2: "TODO MOD"
- desc_sapmi_final_mod: "TODO MOD"
+ desc_sapmi_final_mod: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Europeans."
  
