--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -13,31 +13,31 @@
  missions_yue_state_task_2: "Restoring Kuaiji"
  missions_yue_state_task_2_DESC: ""
 
- missions_yue_state_task_3: "In Need of Allies"
+ missions_yue_state_task_3: "In Need Of Allies"
  missions_yue_state_task_3_DESC: ""
 
  missions_yue_state_task_4: "Forging Bronze Swords"
  missions_yue_state_task_4_DESC: ""
 
- missions_yue_state_task_5: "Yue of Langya"
+ missions_yue_state_task_5: "Yue Of Langya"
  missions_yue_state_task_5_DESC: ""
 
- missions_yue_state_task_6: "Horn of Plenty"
+ missions_yue_state_task_6: "Horn Of Plenty"
  missions_yue_state_task_6_DESC: ""
 
  missions_yue_state_task_7: "Restore Navy" #Yue were renowned for their strong navy which set them apart from the northern Chinese
  missions_yue_state_task_7_DESC: ""
 
- missions_yue_state_task_8: "Island of Yizhou"
+ missions_yue_state_task_8: "Island Of Yizhou"
  missions_yue_state_task_8_DESC: ""
 
  missions_yue_state_task_9: "The Thunder Strikes"
  missions_yue_state_task_9_DESC: ""
 
- missions_yue_state_task_10: "Art of War" #by Sun Tzu
+ missions_yue_state_task_10: "Art Of War" #by Sun Tzu
  missions_yue_state_task_10_DESC: ""
 
- missions_yue_state_task_11: "Revenge on Qi" #Qi led on Wuqiang and deflected the attack of Yue from Qi to Chu. Yue was then utterly defeated by Chu.
+ missions_yue_state_task_11: "Revenge On Qi" #Qi led on Wuqiang and deflected the attack of Yue from Qi to Chu. Yue was then utterly defeated by Chu.
  missions_yue_state_task_11_DESC: ""
 
  missions_yue_state_task_12: "Magic Canal" #same as Chinese empire mission task 24
@@ -46,13 +46,13 @@
  missions_yue_state_task_13: "Austronesian Tribute"
  missions_yue_state_task_13_DESC: ""
 
- missions_yue_state_task_14: "Lady of Yue" #Yuenü was a swordswoman from the state of Yue. She is also known as Maiden of the Southern Forest.
+ missions_yue_state_task_14: "Lady Of Yue" #Yuenü was a swordswoman from the state of Yue. She is also known as Maiden of the Southern Forest.
  missions_yue_state_task_14_DESC: ""
 
  missions_yue_state_task_15: "Conquer Ouyue"
  missions_yue_state_task_15_DESC: ""
 
- missions_yue_state_task_16: "March on Minyue"
+ missions_yue_state_task_16: "March On Minyue"
  missions_yue_state_task_16_DESC: ""
 
  missions_yue_state_task_17: "Invade Nanyue"
@@ -61,13 +61,13 @@
  missions_yue_state_task_18: "Miao Miao"
  missions_yue_state_task_18_DESC: ""
 
- missions_yue_state_task_19: "Imprison the Hung"
+ missions_yue_state_task_19: "Imprison The Hung"
  missions_yue_state_task_19_DESC: ""
 
- missions_yue_state_task_20: "Reclaim the Northern Lands"
+ missions_yue_state_task_20: "Reclaim The Northern Lands"
  missions_yue_state_task_20_DESC: ""
 
- missions_yue_state_task_21: "Forge a Royal Sword" #King Goujian had a prominent sword, so forge your own https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg/1920px-Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg
+ missions_yue_state_task_21: "Forge A Royal Sword" #King Goujian had a prominent sword, so forge your own https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg/1920px-Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg
  missions_yue_state_task_21_DESC: ""
  
  missions_yue_state_task_22: "Unwarranted Mildness" #As a gesture of mildness King Goujian returned some towns to the states of Chu, Song, and Lu that the king of Wu had occupied earlier.
@@ -181,22 +181,22 @@
  missions_yue_state_task_4_base_metals_mine: "We have at least one province with the base metals trade good and the mine building."
  missions_yue_state_task_7_navy_reward: "We will construct a strong navy."
  missions_yue_tribes_task_16_invite_yue_dynasty: "We will invite the Yue dynasty to rule our country."
- missions_yue_state_task_1_claims: "TODO CLAIMS"
- missions_yue_state_task_5_claims: "TODO CLAIMS"
- missions_yue_state_task_7_claims: "TODO CLAIMS"
- missions_yue_state_task_8_claims: "TODO CLAIMS"
- missions_yue_state_task_9_claims: "TODO CLAIMS"
- missions_yue_state_task_11_claims: "TODO CLAIMS"
- missions_yue_state_task_15_claims: "TODO CLAIMS"
- missions_yue_state_task_16_claims: "TODO CLAIMS"
- missions_yue_state_task_17_claims: "TODO CLAIMS"
- missions_yue_state_task_19_claims: "TODO CLAIMS"
- missions_yue_state_task_20_claims: "TODO CLAIMS"
- missions_yue_state_task_90_claims: "TODO CLAIMS"
+ missions_yue_state_task_1_claims: "We will get claims on the Areas of Guangling, Jiujiang and Linhuai."
+ missions_yue_state_task_5_claims: "We will get claims on the Areas of Donghai, Langya, Beihai and Donglai."
+ missions_yue_state_task_7_claims: "We will get claims on the Areas of Tutikungshan and Qilin."
+ missions_yue_state_task_8_claims: "We will get claims on the Areas of Luzon and Maynila."
+ missions_yue_state_task_9_claims: "We will get claims on the Areas of Luling, Guiyang, Changsha, Lingling and Changde."
+ missions_yue_state_task_11_claims: "We will get claims on the Areas of Pei, Peng, Shanyang and Taishan as well as on all provinces owned by Qi."
+ missions_yue_state_task_15_claims: "We will get claims on the Areas of Jianan and Luling."
+ missions_yue_state_task_16_claims: "We will get claims on the Areas of Nanhai, Cangwu and Hepu."
+ missions_yue_state_task_17_claims: "We will get claims on the Areas of Yulin, Jiaozhi and Jiuzhen."
+ missions_yue_state_task_19_claims: "We will get claims on the Region of Nanzhong."
+ missions_yue_state_task_20_claims: "We will get claims on the Areas of Lujiang, Jiangxia, Yicheng and Yuzhang."
+ missions_yue_state_task_90_claims: "We will get claims on the Areas of Wu, Yancheng and Danyang."
  
  #Treasure
  yue_royal_sword: "Reforged Royal Sword of Yue"
- yue_royal_sword_desc: "TODO"
+ yue_royal_sword_desc: "The Yue king Goujian forged an elaborate bronze sword to show his authority. Unfortunately, he took it with him to the other world, and since then the power of the Yue waned over time. Now, our rulers have even surpassed Goujian, so it is only fitting that their royal sword is even more magnificent."
  
  #Modifiers
  restored_kuaiji_mod: "Restoration of the Yue Capital"
@@ -210,15 +210,15 @@
  yue_learnt_from_generosity: "Learnt from Past Mildness"
  langyayue_naval_dominance: "Naval Dominance of the Yue"
  desc_restored_kuaiji_mod: "Prosperity has returned to the capital of the Yue."
- desc_yue_found_allies: "TODO MOD"
- desc_yue_state_bronze_swords: "TODO MOD"
- desc_yue_southern_trade: "TODO MOD"
- desc_yue_art_of_war: "TODO MOD"
- desc_yue_civilisation_effort: "TODO MOD"
- desc_fall_of_yue_mod: "TODO MOD"
- desc_restored_yue_state: "TODO MOD"
- desc_yue_learnt_from_generosity: "TODO MOD"
- desc_langyayue_naval_dominance: "TODO MOD"
+ desc_yue_found_allies: "Our newly found allies are supporting us with their troops."
+ desc_yue_state_bronze_swords: "The Yue people have always been renowned for the quality of their bronze swords."
+ desc_yue_southern_trade: "We have discovered and dominate new trade routes to our south."
+ desc_yue_art_of_war: "We are following the principles set out by the renowned general, strategist and sage Sun Tzu."
+ desc_yue_civilisation_effort: "Our newly conquered territories are in dire need of more civilization."
+ desc_fall_of_yue_mod: "Since the defeat of the Yue under king Wuqiang by the hands of Chu, the state of Yue has been in a state of rapid decline ..."
+ desc_restored_yue_state: "The last time the state of Yue was prosperous like this was during the reign of king Goujian which ended in 465 BCE."
+ desc_yue_learnt_from_generosity: "We have learnt from past unwarranted generosity. Never show generosity to those that do not deserve it."
+ desc_langyayue_naval_dominance: "What sets us apart from the other nations of the Chinese plains is our strong navy."
  
  #################
  #Langyayue Delta#
