Tiniest Bit of Loc

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -664,7 +664,7 @@
 
  # Minyue
  minyue_heritage:0 "Minyue Heritage"
- minyue_heritage_desc:0 "Founded in 334 BCE by the exiled Yue dynasties that fled the wars between the Yue kingdom and the Chu kingdom like its sister-kingdom of Ouyue, the state of Minyue long feared the aggressive expansion and overbearing natures of great empires hailing from the Central Plains and the wealthy river valleys. The people of the kingdom shared some common traditions with the Taiwanese islanders and when newlyweds settled down to build their nest and home, they often chose to erect their homestead close to the wife's parents so the elderly could be taken care of."
+ minyue_heritage_desc:0 "Founded in 298 BCE by the exiled Yue dynasties that fled the wars between the Yue kingdom and the Chu kingdom like its sister-kingdom of Ouyue, the state of Minyue long feared the aggressive expansion and overbearing natures of great empires hailing from the Central Plains and the wealthy river valleys. The people of the kingdom shared some common traditions with the Taiwanese islanders and when newlyweds settled down to build their nest and home, they often chose to erect their homestead close to the wife's parents so the elderly could be taken care of."
 
  # Ranmang
  ranmang_heritage:0 "Stone Home Heritage"
@@ -1339,18 +1339,18 @@
  any_rhaetian_country_tt:0 "@trigger_no! All #Y Rhaetian#! nations are our subjects, or we are the only #Y Rhaetian nation."
 
  ti_nation_formation_events.1.t: "United Jin"
- ti_nation_formation_events.1.desc: "TODO"
+ ti_nation_formation_events.1.desc: "A few generations ago, the lands of Jin were partitioned and divided between the Han, Zhao and Wei; an epochal moment in our histories, and one that some say should have never happened. But now, the misdeeds of the past have been atoned for, and Jin has been pieced together by our hands; all that remains left to do is to announce the triumphant rebirth of this pillar of Zhou culture."
  ti_nation_formation_events.1.a: "Let us fully restore Jin."
  ti_nation_formation_events.1.b: "We can stand on our own."
 
  unite_zhou: "Unite Zhou"
- unite_zhou_desc: "TODO"
+ unite_zhou_desc: "After a long period of warring with the equally small remaining and fractured domains of the Zhou, all of their territories have been subjugated by us. It is therefore time to assert our position as the new Zhou suzerain."
  
  form_lu: "Form Lu"
- form_lu_desc: "TODO"
+ form_lu_desc: "As the last Sanhuan, it is our right to claim the throne of Lu. Like the rulers of Lu have not shown mercy to the other two Sanhuan branches, we should not spare these corrupt and decadent rulers from the same fate."
  
  ti_nation_formation_events.2.t: "Overthrown Main Lu Line"
- ti_nation_formation_events.2.desc: "TODO"
+ ti_nation_formation_events.2.desc: "[ROOT.GetCountry.GetRuler.GetName] has finally managed to topple the last of the #E Lu#!, bringing glory and prestige to [ROOT.GetCountry.GetRuler.GetHerHis] kingdom.\n\nNot only has an enemy been dethroned, but within our own realm, the generals and governors have thrown their support behind [ROOT.GetCountry.GetRuler.GetFirstName]. Oaths of loyalty have been sworn, and all within [GetCountry('BII').GetName)] and abroad are now convinced that [ROOT.GetCountry.GetRuler.GetFirstName] is the rightful heir of the [GetCountry('LUU').GetName)]."
  ti_nation_formation_events.2.a: "Let us claim the Lu heritage."
  ti_nation_formation_events.2.b: "We are strong ourselves."
  
@@ -1365,4 +1365,4 @@
  NANYUE_NAME: "Nanyue"
  NANYUE_ADJECTIVE: "Nanyuan"
  form_nanyue: "Form Nanyue"
- form_nanyue_desc: "TODO"
+ form_nanyue_desc: "There are many southern Yue peoples hugging the shore, however, because of their growing fortune, they are constantly being eyed by the Central Plains empires, who just see them as mere vassals. It is time to unite them and lead them to battles against these foreigners."
