--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -11,10 +11,10 @@
  missions_yue_state_task_1_DESC: ""
 
  missions_yue_state_task_2: "Restoring Kuaiji"
- missions_yue_state_task_2_DESC: ""
+ missions_yue_state_task_2_DESC: "Civil wars and Chu invasions have brought misery and destruction to the city of Kuaiji, it is time to clear the last vestiges of past woes and become a forward-looking center of the state of Yue."
 
  missions_yue_state_task_3: "In Need Of Allies"
- missions_yue_state_task_3_DESC: ""
+ missions_yue_state_task_3_DESC: "With our own army failing on all sides, allies are needed to help the Yue in their hour of need."
 
  missions_yue_state_task_4: "Forging Bronze Swords"
  missions_yue_state_task_4_DESC: ""
@@ -23,7 +23,7 @@
  missions_yue_state_task_5_DESC: ""
 
  missions_yue_state_task_6: "Horn Of Plenty"
- missions_yue_state_task_6_DESC: ""
+ missions_yue_state_task_6_DESC: "Oh horn of plenty, make our lands abundantly fertile, so that some of the best rice can grow here; make our granaries stocked."
 
  missions_yue_state_task_7: "Restore Navy" #Yue were renowned for their strong navy which set them apart from the northern Chinese
  missions_yue_state_task_7_DESC: ""
@@ -70,8 +70,8 @@
  missions_yue_state_task_21: "Forge A Royal Sword" #King Goujian had a prominent sword, so forge your own https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg/1920px-Sword_of_Goujian%2C_Hubei_Provincial_Museum%2C_2015-04-06_01-edit.jpg
  missions_yue_state_task_21_DESC: ""
  
- missions_yue_state_task_22: "Unwarranted Mildness" #As a gesture of mildness King Goujian returned some towns to the states of Chu, Song, and Lu that the king of Wu had occupied earlier.
- missions_yue_state_task_22_DESC: ""
+ missions_yue_state_task_22: "Unwarranted Mildness"
+ missions_yue_state_task_22_DESC: "As a gesture of mildness King Goujian returned some towns to the states of Chu, Song, and Lu that the king of Wu had occupied earlier. However, these states would never show any gratefulness for which they need to be punished."
 
 
  #Events 
@@ -169,9 +169,9 @@
  me_yue_state_22.a: ""
  
  me_yue_state_90_title: "The Fall of the State of Yue" #Wuqiang was defeated in 333 BC by Chu, losing the northern lands except Langya. In 306 BC, Yue was defeated again by Chu and lost Wu, shattering the state into a small part around Langya and a southern part. In 298 BC, all of it was conquered and the Yue dynasty fled to Minyue and Ouyue.
- me_yue_state_90_desc: ""
- me_yue_state_90.a: ""
- me_yue_state_90.b: ""
+ me_yue_state_90_desc: "In 333 BC, King [GetCharacter('(int32)672').GetName] of Yue went north to attack Qi. He believed the Qi envoy named Tian and led his army to attack Chu, where he was unexpectedly ambushed, defeated and died. Since [GetCharacter('(int32)672').GetName] had no designated successor, the country of Yue fell apart and his eldest son, [GetCharacter('(int32)673').GetName], and second son, [GetCharacter('(int32)676').GetName], competed.\n\nTwo years ago the state of Chu used this weakness to conquer Wu, so that only a small strip of land around the city of Langya in the north and the southernmost territories around Kuaiji are left of the once great state of Yue."
+ me_yue_state_90.a: "We need to immediately reclaim our lands."
+ me_yue_state_90.b: "We should better bow to the Chu."
 
  #Tooltips
  missions_yue_state_task_3_chinese_ally: "We have at least one Chinese ally."
@@ -196,7 +196,7 @@
  
  #Treasure
  yue_royal_sword: "Reforged Royal Sword of Yue"
- yue_royal_sword_desc: "The Yue king Goujian forged an elaborate bronze sword to show his authority. Unfortunately, he took it with him to the other world, and since then the power of the Yue waned over time. Now, our rulers have even surpassed Goujian, so it is only fitting that their royal sword is even more magnificent."
+ yue_royal_sword_desc: "King Goujian forged an elaborate bronze sword to show his authority. Unfortunately, he took it with him to the other world, and since then the power of the Yue has waned over time. Now, our rulers have even surpassed him, so it is only fitting that their royal sword is far more magnificent."
  
  #Modifiers
  restored_kuaiji_mod: "Restoration of the Yue Capital"
@@ -338,7 +338,7 @@
  missions_yue_tribes_task_1: "$missions_yue_state_task_1$"
  missions_yue_tribes_task_1_DESC: "$missions_yue_state_task_1_DESC$"
 
- missions_yue_tribes_task_2: "Seat for a King"
+ missions_yue_tribes_task_2: "Seat For A King"
  missions_yue_tribes_task_2_DESC: ""
 
  missions_yue_tribes_task_3: "Ally Yue"
@@ -428,6 +428,6 @@
  me_yue_tribes_1601_desc: ""
  me_yue_tribes_1601.a: ""
  
- me_yue_tribes_90_title: "The Fall of the State of Yue"
- me_yue_tribes_90_desc: ""
- me_yue_tribes_90.a: ""
+ me_yue_tribes_90_title: "The Fall Of The State Of Yue"
+ me_yue_tribes_90_desc: "In 333 BC, King [GetCharacter('(int32)672').GetName] of Yue went north to attack Qi. He believed the Qi envoy named Tian and led his army to attack Chu, where he was unexpectedly ambushed, defeated and died. Since [GetCharacter('(int32)672').GetName] had no designated successor, the country of Yue fell apart and his eldest son, [GetCharacter('(int32)673').GetName], and second son, [GetCharacter('(int32)676').GetName], competed.\n\nTwo years ago the state of Chu used this weakness to conquer Wu, so that only a small strip of land around the city of Langya in the north and the southernmost territories around Kuaiji are left of the once great state of Yue.\n\nSome say the dynasty's future no longer lies in the north but rather in the south among the Yue tribes."
+ me_yue_tribes_90.a: "We should welcome them."
