Rename As Many Tags To INV Tags
Some already exist in TI -> Foxylonian Naming Confusion

--- a/localization/english/acb_countries_l_english.yml
+++ b/localization/english/acb_countries_l_english.yml
@@ -59,8 +59,8 @@
  CAW_ADJ:0 "Cangwu"
  CEN:1 "Chen"
  CEN_ADJ:0 "Chen"
- CHA:1 "Chang"
- CHA_ADJ:0 "Chang"
+ CHA:1 "Chattia"
+ CHA_ADJ:0 "Chattian"
  CHN:1 "Loeu"
  CHN_ADJ:0 "Loeu"
  CHU:1 "Chu"
@@ -280,8 +280,8 @@
  LNH_ADJ:0 "Linhu"
  LOF:1 "Loufan"
  LOF_ADJ:0 "Loufan"
- LON:1 "Long"
- LON_ADJ:0 "Long"
+ LON:1 "Tibulatia"
+ LON_ADJ:0 "Tibulatian"
  LOW:1 "Louwo"
  LOW_ADJ:0 "Louwo"
  LUA:1 "Luan"
