--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -22,16 +22,16 @@
  dian_missions_task_5: "Shove Shoumi"
  dian_missions_task_5_DESC: ""
 
- dian_missions_task_6: "To the Coast"
+ dian_missions_task_6: "To The Coast"
  dian_missions_task_6_DESC: ""
 
- dian_missions_task_7: "The Age of Bronze"
+ dian_missions_task_7: "The Age Of Bronze"
  dian_missions_task_7_DESC: ""
 
  dian_missions_task_8: "Advanced Technology"
  dian_missions_task_8_DESC: ""
 
- dian_missions_task_9: "Twice the Pride, Double the Fall" #see Yelang heritage
+ dian_missions_task_9: "Twice The Pride, Double The Fall" #see Yelang heritage, they were arrogant bastards who thougt that they are better than the Chinese emperor
  dian_missions_task_9_DESC: ""
 
  dian_missions_task_10: "We Need More Shells"
@@ -40,13 +40,13 @@
  dian_missions_task_11: "Royal Tombs"
  dian_missions_task_11_DESC: ""
 
- dian_missions_task_12: "To the Himalayas"
+ dian_missions_task_12: "To The Himalayas"
  dian_missions_task_12_DESC: ""
 
  dian_missions_task_13: "Chinese Embassy"
  dian_missions_task_13_DESC: ""
 
- dian_missions_task_14: "Returning the Favor"
+ dian_missions_task_14: "Returning The Favor"
  dian_missions_task_14_DESC: ""
 
  dian_missions_task_15: "New Capital"
@@ -58,7 +58,7 @@
  dian_missions_task_17: "Highway to India"
  dian_missions_task_17_DESC: ""
 
- dian_missions_task_18: "Royal Seal of Dian"
+ dian_missions_task_18: "Royal Seal Of Dian"
  dian_missions_task_18_DESC: ""
 
 
@@ -136,9 +136,9 @@
  me_dian_1301_desc: ""
  me_dian_1301.a: ""
  
- me_dian_1300_title: "$dian_missions_task_13$"
- me_dian_1300_desc: ""
- me_dian_1300.a: ""
+ me_dian_1302_title: "$dian_missions_task_13$"
+ me_dian_1302_desc: ""
+ me_dian_1302.a: ""
 
  me_dian_14_title: "$dian_missions_task_14$"
  me_dian_14_desc: ""
