Some More Xiongnu Stuff

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -181,35 +181,35 @@
  xiongnu_missions_2_task_16_we_get_concubine: "Our chanyu will marry a Chinese woman who will greatly increase his prestige among our people."
  xiongnu_missions_2_task_6_laoshang_challenges_ruler: "Laoshang will challenge our ruler."
  
- xiongnu_2_speed_run_tt: "If we complete $xiongnu_missions_2_task_21$, we will retain this bonus." #zorgo make it big and red
- xiongnu_missions_2_task_4_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
- xiongnu_missions_2_task_7_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
- xiongnu_missions_2_task_15_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
- xiongnu_missions_2_task_18_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
+ xiongnu_2_speed_run_tt: "#YIf we complete $xiongnu_missions_2_task_21$, we will retain this bonus.#!"
+ xiongnu_missions_2_task_4_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in Transbaikal, Bayanundar, Aimag, Gonglu, Terigun, Modong and Ulaanzuukh."
+ xiongnu_missions_2_task_7_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in Koshkarkol and Busu."
+ xiongnu_missions_2_task_15_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in East Daxianbeishan, Huifa, Sushen and Ussuri."
+ xiongnu_missions_2_task_18_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in Kulunda, Korgantas and Baraba."
  
- xiongnu_missions_2_task_1_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_3_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_4_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_5_claims_1: "TODO CLAIMS"
- xiongnu_missions_2_task_5_claims_2: "TODO CLAIMS"
- xiongnu_missions_2_task_5_claims_3: "TODO CLAIMS"
+ xiongnu_missions_2_task_1_claims: "We will get claims on the Areas of Dunhuang, Jiuquan and Zhangye."
+ xiongnu_missions_2_task_3_claims: "We will get claims on the Areas of Koshkarkol and Busu."
+ xiongnu_missions_2_task_4_claims: "We will get claims on all provinces owned by the Donghu."
+ xiongnu_missions_2_task_5_claims_1: "We will get claims on the Region of You."
+ xiongnu_missions_2_task_5_claims_2: "We will get claims on the Region of Bing."
+ xiongnu_missions_2_task_5_claims_3: "We will get claims on the Region of Yong."
  xiongnu_missions_2_task_5_choose_claims: "We will be able to choose between claims."
- xiongnu_missions_2_task_7_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_9_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_13_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_14_claims: "TODO CLAIMS"
- xiongnu_missions_2_task_20_claims: "TODO CLAIMS"
+ xiongnu_missions_2_task_7_claims: "We will get claims on the Areas of Beishan and Yanqi."
+ xiongnu_missions_2_task_9_claims: "We will get claims on the Areas of Yuyang, Youbeiping, Liaoxi, East Daxianbeishan, Huifa, Sushen and Ussuri."
+ xiongnu_missions_2_task_13_claims: "We will get claims on the Areas of Kulunda, Korgantas, Baraba, Tarim, North Tarim and South_Tarim."
+ xiongnu_missions_2_task_14_claims: "We will get claims on the Areas of Liaodong, Xuantu, Lintun and Lelang."
+ xiongnu_missions_2_task_20_claims: "We will get claims on the Areas of Mahan, South Mahan, Byeonhan and Jinhan."
 
  #Modifiers
- xiongnu_desert_mod: "TODO"
- xiongnu_speed_run: "TODO"
- xiongnu_speed_run_reward: "TODO"
- xiongnu_02_final_mod: "TODO"
- xiongnu_sanctuary_mod: "TODO"
- city_of_chanyu: "TODO"
+ xiongnu_desert_mod: "Surviving the Desert"
+ xiongnu_speed_run: "Like the Wind"
+ xiongnu_speed_run_reward: "$xiongnu_speed_run_reward$"
+ xiongnu_02_final_mod: "Steppe Dominance"
+ xiongnu_sanctuary_mod: "Central Sanctuary"
+ city_of_chanyu: "City of the Chanyu"
  desc_xiongnu_desert_mod: "TODO"
  desc_xiongnu_speed_run: "TODO"
- desc_xiongnu_speed_run_reward: "TODO"
+ desc_xiongnu_speed_run_reward: "$desc_xiongnu_speed_run$"
  desc_xiongnu_02_final_mod: "TODO"
  desc_xiongnu_sanctuary_mod: "TODO"
  desc_city_of_chanyu: "TODO"
