--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -271,23 +271,23 @@
  me_xiongnu_3_28.a:0 ""
 
  #Tooltips
- xiongnu_missions_3_task_1_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_2_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_3_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_4_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_6_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_7_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_9_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_10_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_11_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_12_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_13_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_14_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_16_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_20_claims_persia: "TODO CLAIMS"
- xiongnu_missions_3_task_20_claims_steppe: "TODO CLAIMS"
- xiongnu_missions_3_task_25_claims: "TODO CLAIMS"
- xiongnu_missions_3_task_26_claims: "TODO CLAIMS"
+ xiongnu_missions_3_task_1_claims: "We will get claims on the Areas of Taiyuan, Hengshan, Julu, Handan and Xihe."
+ xiongnu_missions_3_task_2_claims: "We will get claims on the Areas of Hedong, Shangdang, Henan, Yingchuan, Henei, Wei, Daliang, Jiyin and Dong."
+ xiongnu_missions_3_task_3_claims: "We will get claims on the Areas of Deng, Nanyang and Yicheng."
+ xiongnu_missions_3_task_4_claims: "We will get claims on the Areas of Changsha, Yuzhang, Luling and Changde."
+ xiongnu_missions_3_task_6_claims: "We will get claims on the Areas of Qiansheng, Linzi, Beihai, Donglai, Taishan and Langya."
+ xiongnu_missions_3_task_7_claims: "We will get claims on the Areas of Shanyang, Peng, Huaiyang, Pei, Donghai, Linhuai, Guangling and Jiujiang."
+ xiongnu_missions_3_task_9_claims: "We will get claims on the Areas of Kuaiji, Linhai, Jianan and Wuyi."
+ xiongnu_missions_3_task_10_claims: "We will get claims on the Areas of Tutikungshan and Qilin."
+ xiongnu_missions_3_task_11_claims: "We will get claims on the Areas of Longxi, Tianshui, Xianyang, Changan, Yueyang, Jincheng, Amdo and Nuomuhong."
+ xiongnu_missions_3_task_12_claims: "We will get claims on the Areas of Wudu, Guanghan, Shu, Qianwei and Ba."
+ xiongnu_missions_3_task_13_claims: "We will get claims on the Areas of Wuling, Nan, Hanzhong and Hongnong."
+ xiongnu_missions_3_task_14_claims: "We will get claims on the Areas of Lingling, Guiyang, Nanhai and Cangwu."
+ xiongnu_missions_3_task_16_claims: "We will get claims on the Region of Sogdiana."
+ xiongnu_missions_3_task_20_claims_persia: "We will get claims on the Regions of Bactriana, Ariana, Parthia and Persis."
+ xiongnu_missions_3_task_20_claims_steppe: "We will get claims on the Regions of Sakia, Scytho Siberian, Central Asian Steppes, Sarmatia Asiatica, Taurica and Scythia."
+ xiongnu_missions_3_task_25_claims: "We will get claims on the Areas of Jiangxia, Lujiang and Runan."
+ xiongnu_missions_3_task_26_claims: "We will get claims on the Areas of Wu, Danyang and Yancheng."
  xiongnu_missions_3_mery_or_not: "We will be able to either choose mercy or plunder the Chinese."
  xiongnu_missions_3_task_18_sacking_conqueror_effect_tooltip: "Chengzhou will burn!" #please replace name with reference to province p:8379
  xiongnu_missions_3_task_22_upset_tribes: "We might upset our people."
