--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -183,27 +183,27 @@
  me_xiongnu_01_21.a: ""
 
  #Modifiers
- consolidated_clans_xiongnu: ""
+ consolidated_clans_xiongnu: "Consolidated Clans"
  desc_consolidated_clans_xiongnu: ""
- loyalty_luandi_xiongnu: ""
+ loyalty_luandi_xiongnu: "Loyalty to Luandi"
  desc_loyalty_luandi_xiongnu: ""
- toumans_tribe_xiongnu: ""
+ toumans_tribe_xiongnu: "Touman's Tribe"
  desc_toumans_tribe_xiongnu: ""
- conversion_05_xiongnu: ""
+ conversion_05_xiongnu: "Spreading the Xiongnu Way"
  desc_conversion_05_xiongnu: ""
- hoarding_xiongnu: ""
+ hoarding_xiongnu: "Hoarding Horses"
  desc_hoarding_xiongnu: ""
- steppe_mod_xiongnu: ""
+ steppe_mod_xiongnu: "Early Steppe Stirrups"
  desc_steppe_mod_xiongnu: ""
- pastures_xiongnu: ""
+ pastures_xiongnu: "Prairies and Pastures"
  desc_pastures_xiongnu: ""
- tribute_xiongnu: ""
+ tribute_xiongnu: "Extorted Tribute"
  desc_tribute_xiongnu: ""
- breeding_grounds_xiongnu: ""
+ breeding_grounds_xiongnu: "Xiongnu Breeding Grounds"
  desc_breeding_grounds_xiongnu: ""
- insults_xiongnu: ""
+ insults_xiongnu: "Xiongnu Aggression"
  desc_insults_xiongnu: ""
- jumping_xiongnu: ""
+ jumping_xiongnu: "Spreading Tengrism"
  desc_jumping_xiongnu: ""
  
  #Bloodline
@@ -214,15 +214,15 @@
  xiongnu_missions_01_task_1_req: "No great family is scorned."
  xiongnu_missions_01_task_2_tt: "All clan chiefs and government officials have a loyalty above 90."
  xiongnu_missions_01_task_3_touman_is_ruler: "Touman is ruler."
- xiongnu_missions_01_task_5_claims_tt: "TODO CLAIMS TT"
- xiongnu_missions_01_task_6_claims_tt: "TODO CLAIMS TT"
+ xiongnu_missions_01_task_5_claims_tt: "We will get claims on the Areas of Xihai, Ulangom and Jiankun."
+ xiongnu_missions_01_task_6_claims_tt: "We will get claims on the Areas of Altai, Hujie and Jiankun."
  xiongnu_missions_01_task_13_create_children: "Touman's children with his concubines will join our court."
  xiongnu_missions_01_task_14_modun_has_office_general: "Modun has an office or is a general."
  xiongnu_missions_01_task_14_modun_event_chain: "We will see what Modun is up to ..."
- xiongnu_missions_01_task_15_claims_tt: "TODO CLAIMS TT"
+ xiongnu_missions_01_task_15_claims_tt: "We will get claims on the Areas of Barkol, Gobi Altai, North Beishan and Beishan."
  xiongnu_missions_01_task_18_send_emissaries: "We will send emissaries to Chinese rulers."
  xiongnu_missions_01_task_20_modun_is_ruler: "Modun is ruler."
  xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the Luandi family."
  xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than 30 years, who has Xiongnu culture and Tengri religion."
  xiongnu_missions_01_task_2_claimant: "A new claimant will appear."
- xiongnu_missions_1_task_20_claims: "TODO CLAIMS"
+ xiongnu_missions_1_task_20_claims: "We will get claims on the Areas of Barkol, Gobi Altai, Gryphia, Ob, Transbaikal, Bayanundar, Aimag, Gonglu, Terigun, Modong and Andulaanzuukh."
