Ethnicity and DNA fixes

--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -191,6 +191,10 @@
  ARMY_NAME_saka_g: "$NUM$$ORDER$ Army"
  NAVY_NAME_saka_g: "$NUM$$ORDER$ Navy"
  COHORT_NAME_saka_g: "$NUM$$ORDER$ Cohort"
+ ARMY_NAME_bashu_group: "$NUM$$ORDER$ Army"
+ NAVY_NAME_bashu_group: "$NUM$$ORDER$ Navy"
+ bashu_group_malename:0 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
+ bashu_group_femalename:1 "$NAME_FEMALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
 #
 ARMY_NAME_tyrrhenian:0 "$NUM$$ORDER$ Army"
 NAVY_NAME_tyrrhenian:0 "$NUM$$ORDER$ Navy"
