--- a/localization/english/missions/zhangzhung_01_missions_l_english.yml
+++ b/localization/english/missions/zhangzhung_01_missions_l_english.yml
@@ -28,6 +28,7 @@
  
  01_zhangzhung_missions_task_7:0 "Protecting The West"
  01_zhangzhung_missions_task_7_DESC:0 "Now that we have claimed our natural borders, we have decided to systematically go through our provinces and bolster our system of fortifications. The precarious situation in the west demands our attention; we have powerful neighbors there, and no desire to see their armies winding through our mountain passes. \n\n\n\n\n\n\n\n\n\n@greek_mil1!"
+ walls_of_gilgit_tt: "#Y The territory of#! #T Parsni#! #Y needs a#! #G Fortress#!."
  
  01_zhangzhung_missions_task_8:0 "Roof Of The World"
  01_zhangzhung_missions_task_8_DESC:0 "Although the terrain is difficult to live in, much like our own, the mountains of [GetProvince('(int32)6769').GetArea.GetName] are inhabited by a weak people that we could easily destroy and drive away. Controlling their region would not only improve our security, but would solidify our hold over the local trade routes even further. \n\n\n\n\n\n\n\n\n\n@persia_mil15!"
