actually dying with this tree (jomon tree work)

--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -223,7 +223,7 @@
 
  ## EMISHI ##
  emishi_missions:0 "Trouble in #E Tohoku#!"
- emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohokuku#! area of northern #E Honshu#!."
+ emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohokuku#! area of northern #E Honshu#!. In now-faded memories, there was a time where the [GetCulture('dewa').GetCultureGroup.GetName|Y] lived all throughout what is now called as #E Wa#!.\n\nSince the #Y Yayoi#! invaded #E Wa#!, the #E Yayoi Jidai#! has reigned over the isolated island. The #Y Jomon#! are enterring into what is known as the #E Epi-Jomon Jidai#!, an era that would see the last remnants of #Y Jomon#! culture absorbed into the coming #Y Yayoi#! culture, or migrating north to the island they call #E Ezogashima#!."
  emishi_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united the [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Tohoku#!."
  emishi_missions_BUTTON_TOOLTIP:0 "The Kamuy will lead the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] to victory!"
 
@@ -274,6 +274,10 @@
  need_food_building_tt:0 "Any owned province has a #Y Farming Settlement#! building."
  oratory_focus_tree_enabled_tt:0 "[ROOT.GetCountry.GetRulerTitle|E] [ROOT.GetCountry.GetRuler.GetPraenomen|E] has the #Y Oratory Character Focus#!."
  yayoification_add_1_tt:0 "#Y Yayoification#! increases by #G 1#! point."
+ tohoku_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Tohoku#! area."
+ hokkaido_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Hokkaido#! area."
+ japan_culture_neighbor_tt:0 "The state culture is #Y Yayoi#!."
+ neighbor_is_subject_tt:0 "The state is a subject of [SCOPE.GetRootScope.GetCountry.GetName|E]."
 
 #Modifiers
  emishi_tactics:0 "Hit and Run Tactics"
@@ -285,6 +289,8 @@
 
 #Others
  emishi_electric:0 "Elegence of the Emishi"
+ emishi_name:0 "Emishi"
+ emishi_adj:0 "Emishi"
 
 #Events
  me_emishi_1_title:0 "$emishi_missions_task_1$"
